--- a/assignment/index.html
+++ b/assignment/index.html
@@ -8,5 +8,8 @@
     <h1>Week 2 Assignment - Part 1</h1>
     <p>See console for output.</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
+    <p> I was unsure if I should use == or === in the complex conditional</p>
+    <p> I know the first stretch goal, number 16, is not quite correct. I'm having trouble figuring out how to write the conditional mostPets is acutally given a value. I'm a bit confused if mostPets is supposed to be a number or a string. I can't quite get my head around it.  
+
   </body>
 </html>
