updated notes in index

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -9,7 +9,7 @@
     <p>See console for output.</p>
     <!-- If you have any questions, add them in paragraph tags here! -->
     <p> I was unsure if I should use == or === in the complex conditional</p>
-    <p> I know the first stretch goal, number 16, is not quite correct. I'm having trouble figuring out how to write the conditional mostPets is acutally given a value. I'm a bit confused if mostPets is supposed to be a number or a string. I can't quite get my head around it.  
+    <p> I know the first stretch goal, number 16, is not quite correct. I'm having trouble figuring out how to write the conditional so that mostPets is acutally given a value. I'm also a bit confused if mostPets is supposed to be a number or a string. I can't quite get my head around it.  
 
   </body>
 </html>
